[package]
name = "shift-register-driver"
version = "0.1.1"
authors = ["Josh Mcguigan"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform agnostic driver for shift register's built using the embedded-hal"
keywords = ["embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JoshMcguigan/shift-register-driver"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.1"
